--- a/app/assets/javascripts/patient.js.erb
+++ b/app/assets/javascripts/patient.js.erb
@@ -88,7 +88,7 @@ function callback(response, status) {
     console.log("cat")
     var outputDiv = $('#outputDiv')[0];
     outputDiv.innerHTML = '';
-    outputDiv.innerHTML = origins + ' to ' + destinations + ': ' + results.distance.text + ' in ' + results.duration.text + '<br>';
+    // outputDiv.innerHTML = origins + ' to ' + destinations + ': ' + results.distance.text + ' in ' + results.duration.text + '<br>';
     $.post('/patients/'+$('body').data("current-patient")+'/eta', {eta: results.duration.text} );
   }
 }
