--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -1,3 +1,4 @@
+
 <% if notice %>
   <p class="alert alert-success"><%= notice %></p>
 <% end %>
@@ -22,7 +23,7 @@
 <p>How are you travelling there?</p>
   <div id="buttonDiv">
     <input type="radio" name="group1" value="driving">Driving</input><br>
-    <input type="radio" name="group1" value="transit">Transit</input><br>
+    <input type="radio" name="group1" value="transit">Public Transportation</input><br>
     <input type="radio" name="group1" value="walking">Walking</input><br>
   </div>
 
