--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -2,9 +2,9 @@
 <p>Find me in app/views/doctors/index.html.erb</p>
 
 <%= button_to "Add Event", root_path, method: :get %>
-<!-- <div id="calendar"></div>
- -->
-<style type="text/css">
+<div id="calendar"></div>
+
+<!-- <style type="text/css">
   .iframe {
     width: 80%;
     margin: 0 auto;
@@ -14,3 +14,4 @@
 <div class="iframe">
 <iframe src="https://www.google.com/calendar/embed?src=n825ka53ioka43rmf80b9pagn4%40group.calendar.google.com&ctz=America/New_York" align="middle" frameborder="0" scrolling="no" height="800" width="1200" seamless></iframe>
 </div>
+ -->
