--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,85 @@
  *= require_tree .
  *= require_self
  */
+
+$first: #616161;
+$second: #FFEB3E;
+$third: #00C4FA;
+$fourth: #F5F5F5;
+$sixth: #12C700;
+
+@media only screen and (max-width : 480px) {
+  body, nav, div, span, article, p, ul, li, a {
+    margin: 0;
+    border: 0;
+    padding: 0;
+    font-family: 'Roboto', sans-serif; 
+    text-decoration: none; }
+
+  body {
+    background-color: $first;
+    width: 100%;
+  }
+  .header {
+    width: 100%;
+    height: 52px;
+    background-color: $second;
+    position: fixed;
+    top: 0px;
+    
+    #logo{
+      font-size: 36px;
+      padding-left: 10px;
+    }
+  }
+  .navbar-text {
+    margin-top: 58px;
+    color: $fourth;
+    margin-bottom: 5px;
+    text-align: center;
+  }
+  #edit a:active {
+    color: $fourth;
+  }
+  #logout a:active {
+    color: $fourth;
+  }
+
+  #calendar {
+    width: 85%;
+    margin: 0 auto;
+    background-color: silver;
+  }
+
+  #travel {
+    width: 100%;
+    color: $fourth;
+  }
+
+  #travel > * {
+    margin: 0 auto;
+    display: block;
+    width: 65%;
+    text-align: center;
+   }
+
+  form.button_to input[type="submit"]{
+    background-color: white;
+    text-align: center;
+    color: $third;
+    width: 100%;
+    margin: 0 auto;
+    font-size: 1.5;
+    display: block;
+    border-radius: 5px;
+      
+      &:active {
+        background-color: $sixth;
+      }
+  }
+}
+
+
+
+
+
