still working on this

--- a/app/assets/javascripts/doctors.js.erb
+++ b/app/assets/javascripts/doctors.js.erb
@@ -28,8 +28,8 @@ debugger
       var myEvent = {
         title:"my new event",
         allDay: false,
-        start: new Date(),
-        end: new Date()
+        start: new Date("2015-03-16T12:30:00"),
+        end: new Date("2015-03-16T13:30:00")
       };
       myCalendar.fullCalendar('renderEvent', myEvent, true );
 
