--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -4,6 +4,14 @@
 <%= button_to "Add Event", root_path, method: :get %>
 <div id="calendar"></div>
 
+<!-- <div id="eventContent" title="Event Details" style="display:none;">
+    Start: <span id="startTime"></span><br>
+    End: <span id="endTime"></span><br><br>
+    <p id="eventInfo"></p>
+    <p><strong><a id="eventLink" href="" target="_blank">Read More</a></strong></p>
+</div>
+ -->
+
 <!-- <style type="text/css">
   .iframe {
     width: 80%;
