--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -2,32 +2,12 @@
 <p>Find me in app/views/doctors/index.html.erb</p>
 
 <%= button_to "Add Event", root_path, method: :get %>
-<div id="calendar">
-  <div id="popover-head" class="hide">some title</div>
-  <div id="popover-content" class="hide">
-      <form>
-            <input type="text" name="asa" value="asa" />
-      </form>
-  </div>
+<div id="calendar"></div>
+
+<div id="popover-head" class="hide">some title</div>
+<div id="popover-content" class="hide">
+  <form>
+    <input type="text" name="asa" value="asa" />
+  </form>
 </div>
 
-<!-- <div id="eventContent" title="Event Details" style="display:none;">
-    Start: <span id="startTime"></span><br>
-    End: <span id="endTime"></span><br><br>
-    <p id="eventInfo"></p>
-    <p><strong><a id="eventLink" href="" target="_blank">Read More</a></strong></p>
-</div>
- -->
-
-
-<!-- <style type="text/css">
-  .iframe {
-    width: 80%;
-    margin: 0 auto;
-  }
-</style>
-
-<div class="iframe">
-<iframe src="https://www.google.com/calendar/embed?src=n825ka53ioka43rmf80b9pagn4%40group.calendar.google.com&ctz=America/New_York" align="middle" frameborder="0" scrolling="no" height="800" width="1200" seamless></iframe>
-</div>
- -->
