--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,6 +19,7 @@ $first: #616161;
 $second: #FFEB3E;
 $third: #00C4FA;
 $fourth: #F5F5F5;
+$fifth: silver;
 $sixth: #12C700;
 
 @media only screen and (max-width : 480px) {
@@ -51,13 +52,24 @@ $sixth: #12C700;
     margin-bottom: 5px;
     text-align: center;
   }
-  #edit a:active {
+  #edit:active {
     color: $fourth;
   }
-  #logout a:active {
+  #edit:hover {
+    color: $fifth;
+  }
+  #edit:visited {
     color: $fourth;
   }
-
+  #logout:active {
+    color: $fourth;
+  }
+  #logout:hover {
+    color: $fifth;
+  }
+  #logout:visited {
+    color: $fourth;
+  }
   #calendar {
     width: 85%;
     margin: 0 auto;
