more little styling

--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -1,4 +1,4 @@
-<h1> Hate the Waiting Room? </h1>
+<br><br><h1> Hate the Waiting Room? </h1>
 <h2> Tell your Doctor you are on your way </h2>
 
 <!-- <% if notice %>
