--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,6 +21,26 @@ $third: #00C4FA;
 $fourth: #F5F5F5;
 $fifth: silver;
 $sixth: #12C700;
+body, nav, div, span, article, p, ul, li, a {
+    margin: 0;
+    border: 0;
+    padding: 0;
+    font-family: 'Roboto', sans-serif; 
+    text-decoration: none; }
+
+.header {
+  width: 100%;
+  height: 52px;
+  background-color: $second;
+  position: fixed;
+  top: 0px;
+  
+  #logo{
+    font-size: 36px;
+    padding-left: 10px;
+  }
+}
+
 
 @media only screen and (max-width : 480px) {
   body, nav, div, span, article, p, ul, li, a {
@@ -79,6 +99,10 @@ $sixth: #12C700;
   #travel {
     width: 100%;
     color: $fourth;
+  }
+
+  #ouputDiv {
+    font-family: 'Roboto', sans-serif;
   }
 
   #travel > * {
