--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -20,7 +20,7 @@
   <% end %>
 </p>
 
-<div id="calendar" height: "600" width: "800"></div>
+<!-- <div id="calendar" height: "600" width: "800"></div> -->
 
 
 <div id="travel">
