--- a/app/assets/javascripts/patient.js.erb
+++ b/app/assets/javascripts/patient.js.erb
@@ -36,7 +36,7 @@ $('body').on("click","#tracking", buttonSelect)
 var transportation;
 function buttonSelect() {
   // $('#buttonDiv').attr('hidden',false);
-  transportation = $('input[name=group1]:checked', '#buttonDiv').val();
+  transportation = $('#buttonDiv').val();
   getLocation();
 
 }
@@ -93,7 +93,7 @@ function callback(response, status) {
     console.log("cat")
     var outputDiv = $('#outputDiv')[0];
     outputDiv.innerHTML = '';
-    // outputDiv.innerHTML = origins + ' to ' + destinations + ': ' + results.distance.text + ' in ' + results.duration.text + '<br>';
+    outputDiv.innerHTML = origins + ' to ' + destinations + ': ' + results.distance.text + ' in ' + results.duration.text + '<br>';
     $.post('/patients/'+$('body').data("current-patient")+'/eta', {eta: results.duration.text} );
   }
 }
