--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
-  <link href='fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+  <!-- <link href='fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'> -->
 </head>
 
 <body class="<%= controller_name %> <%= action_name %>" data-current-patient="<%= current_patient.try(:id) %>" data-current-patient-email="<%= current_patient.try(:email) %>">
