--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -13,7 +13,7 @@
 </div>
  -->
 
-<head>
+<!-- <head>
   <meta charset="utf-8">
   <title>jQuery UI Dialog - Modal form</title>
   <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
@@ -125,8 +125,8 @@
   });
   </script>
 </head>
-
-<body>
+ -->
+<!-- <body>
  
   <div id="dialog-form" title="Create new user">
     <p class="validateTips">All form fields are required.</p>
@@ -140,7 +140,7 @@
         <label for="password">Password</label>
         <input type="password" name="password" id="password" value="xxxxxxx" class="text ui-widget-content ui-corner-all">
    
-        <!-- Allow form submission with keyboard without duplicating the dialog button -->
+        Allow form submission with keyboard without duplicating the dialog button
         <input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
       </fieldset>
     </form>
@@ -167,3 +167,5 @@
   </div>
   <button id="create-user">Create new user</button>
 </body>
+
+ -->
