--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -1,12 +1,12 @@
 <h1>Doctors#index</h1>
 <br><br><br>
 
-<%= button_to "Add Event", root_path, method: :get %>
+<%=# button_to "Add Event", root_path, method: :get %>
 <br>
-<div id="calendar"></div>
+<!-- <div id="calendar"></div> -->
 
 
-<!-- <head>
+<head>
   <meta charset="utf-8">
   <title>jQuery UI Dialog - Modal form</title>
   <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
@@ -118,8 +118,8 @@
   });
   </script>
 </head>
- -->
-<!-- <body>
+
+ <body>
  
   <div id="dialog-form" title="Create new user">
     <p class="validateTips">All form fields are required.</p>
@@ -161,4 +161,4 @@
   <button id="create-user">Create new user</button>
 </body>
 
- -->
+
