--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -1,11 +1,3 @@
-<h1>Doctors#index</h1>
-<br><br><br>
-
-<%=# button_to "Add Event", root_path, method: :get %>
-<br>
-<!-- <div id="calendar"></div> -->
-
-
 <head>
   <meta charset="utf-8">
   <title>jQuery UI Dialog - Modal form</title>
@@ -13,7 +5,7 @@
   <script src="//code.jquery.com/jquery-1.10.2.js"></script>
   <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
   <link rel="stylesheet" href="/resources/demos/style.css">
-  <style>
+<!--   <style>
     body { font-size: 62.5%; }
     label, input { display:block; }
     input.text { margin-bottom:12px; width:95%; padding: .4em; }
@@ -25,111 +17,113 @@
     .ui-dialog .ui-state-error { padding: .3em; }
     .validateTips { border: 1px solid transparent; padding: 0.3em; }
   </style>
+ -->
   <script>
-  $(function() {
-    var dialog, form,
- 
-      // From http://www.whatwg.org/specs/web-apps/current-work/multipage/states-of-the-type-attribute.html#e-mail-state-%28type=email%29
-      emailRegex = /^[a-zA-Z0-9.!#$%&'*+\/=?^_`{|}~-]+@[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?(?:\.[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?)*$/,
-      name = $( "#name" ),
-      email = $( "#email" ),
-      password = $( "#password" ),
-      allFields = $( [] ).add( name ).add( email ).add( password ),
-      tips = $( ".validateTips" );
- 
-    function updateTips( t ) {
-      tips
-        .text( t )
-        .addClass( "ui-state-highlight" );
-      setTimeout(function() {
-        tips.removeClass( "ui-state-highlight", 1500 );
-      }, 500 );
-    }
- 
-    function checkLength( o, n, min, max ) {
-      if ( o.val().length > max || o.val().length < min ) {
-        o.addClass( "ui-state-error" );
-        updateTips( "Length of " + n + " must be between " +
-          min + " and " + max + "." );
-        return false;
-      } else {
-        return true;
-      }
-    }
- 
-    function checkRegexp( o, regexp, n ) {
-      if ( !( regexp.test( o.val() ) ) ) {
-        o.addClass( "ui-state-error" );
-        updateTips( n );
-        return false;
-      } else {
-        return true;
-      }
-    }
- 
-    function addUser() {
-      var valid = true;
-      allFields.removeClass( "ui-state-error" );
- 
-      valid = valid && checkLength( name, "username", 3, 16 );
-      valid = valid && checkLength( email, "email", 6, 80 );
-      valid = valid && checkLength( password, "password", 5, 16 );
- 
-      valid = valid && checkRegexp( name, /^[a-z]([0-9a-z_\s])+$/i, "Username may consist of a-z, 0-9, underscores, spaces and must begin with a letter." );
-      valid = valid && checkRegexp( email, emailRegex, "eg. ui@jquery.com" );
-      valid = valid && checkRegexp( password, /^([0-9a-zA-Z])+$/, "Password field only allow : a-z 0-9" );
- 
-      if ( valid ) {
-        $( "#users tbody" ).append( "<tr>" +
-          "<td>" + name.val() + "</td>" +
-          "<td>" + email.val() + "</td>" +
-          "<td>" + password.val() + "</td>" +
-        "</tr>" );
-        dialog.dialog( "close" );
-      }
-      return valid;
-    }
- 
-    dialog = $( "#dialog-form" ).dialog({
-      autoOpen: false,
-      height: 300,
-      width: 350,
-      modal: true,
-      buttons: {
-        "Create an account": addUser,
-        Cancel: function() {
-          dialog.dialog( "close" );
-        }
-      },
-      close: function() {
-        form[ 0 ].reset();
-        allFields.removeClass( "ui-state-error" );
-      }
-    });
- 
-    form = dialog.find( "form" ).on( "submit", function( event ) {
-      event.preventDefault();
-      addUser();
-    });
- 
-    $( "#create-user" ).button().on( "click", function() {
-      dialog.dialog( "open" );
-    });
-  });
+    // $(function() {
+    //   var dialog, form,
+   
+    //     // From http://www.whatwg.org/specs/web-apps/current-work/multipage/states-of-the-type-attribute.html#e-mail-state-%28type=email%29
+    //     emailRegex = /^[a-zA-Z0-9.!#$%&'*+\/=?^_`{|}~-]+@[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?(?:\.[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?)*$/,
+    //     summary = $( "#summary" ),
+    //     start = $( "#start" ),
+    //     password = $( "#password" ),
+    //     allFields = $( [] ).add( summary ).add( start ).add( password ),
+    //     tips = $( ".validateTips" );
+   
+    //   function updateTips( t ) {
+    //     tips
+    //       .text( t )
+    //       .addClass( "ui-state-highlight" );
+    //     setTimeout(function() {
+    //       tips.removeClass( "ui-state-highlight", 1500 );
+    //     }, 500 );
+    //   }
+   
+    //   function checkLength( o, n, min, max ) {
+    //     if ( o.val().length > max || o.val().length < min ) {
+    //       o.addClass( "ui-state-error" );
+    //       updateTips( "Length of " + n + " must be between " +
+    //         min + " and " + max + "." );
+    //       return false;
+    //     } else {
+    //       return true;
+    //     }
+    //   }
+   
+    //   function checkRegexp( o, regexp, n ) {
+    //     if ( !( regexp.test( o.val() ) ) ) {
+    //       o.addClass( "ui-state-error" );
+    //       updateTips( n );
+    //       return false;
+    //     } else {
+    //       return true;
+    //     }
+    //   }
+   
+    //   function addEvent() {
+    //     var valid = true;
+    //     allFields.removeClass( "ui-state-error" );
+   
+    //     valid = valid && checkLength( summary, "username", 3, 16 );
+    //     valid = valid && checkLength( start, "start", 6, 80 );
+    //     valid = valid && checkLength( password, "password", 5, 16 );
+   
+    //     valid = valid && checkRegexp( summary, /^[a-z]([0-9a-z_\s])+$/i, "Username may consist of a-z, 0-9, underscores, spaces and must begin with a letter." );
+    //     valid = valid && checkRegexp( start, emailRegex, "eg. ui@jquery.com" );
+    //     valid = valid && checkRegexp( password, /^([0-9a-zA-Z])+$/, "Password field only allow : a-z 0-9" );
+    //     // add to ajax call
+    //     if ( valid ) {
+    //       $("#calendar").append( "<tr>" +
+    //         "<td>" + summary.val() + "</td>" +
+    //         "<td>" + start.val() + "</td>" +
+    //         "<td>" + end.val() + "</td>" +
+    //       "</tr>" );
+    //       dialog.dialog( "close" );
+    //     }
+    //     return valid;
+    //   }
+   
+    //   dialog = $( "#dialog-form" ).dialog({
+    //     autoOpen: false,
+    //     height: 300,
+    //     width: 350,
+    //     modal: true,
+    //     buttons: {
+    //       "Create an event": addEvent,
+    //       Cancel: function() {
+    //         dialog.dialog( "close" );
+    //       }
+    //     },
+    //     close: function() {
+    //       form[ 0 ].reset();
+    //       allFields.removeClass( "ui-state-error" );
+    //     }
+    //   });
+   
+    //   form = dialog.find( "form" ).on( "submit", function( event ) {
+    //     event.preventDefault();
+    //     addEvent();
+    //   });
+   
+    //   $( "#create-event" ).button().on( "click", function() {
+    //     dialog.dialog( "open" );
+    //   });
+    // });
   </script>
 </head>
 
  <body>
- 
-  <div id="dialog-form" title="Create new user">
+
+  <div id="dialog-form" title="Create new event">
     <p class="validateTips">All form fields are required.</p>
-   
     <form>
       <fieldset>
-        <label for="name">Name</label>
-        <input type="text" name="name" id="name" value="Jane Smith" class="text ui-widget-content ui-corner-all">
-        <label for="email">Email</label>
-        <input type="text" name="email" id="email" value="jane@smith.com" class="text ui-widget-content ui-corner-all">
+        <label for="summary">Summary</label>
+        <input type="text" name="summary" id="summary" placeholder="Title" class="text ui-widget-content ui-corner-all">
+        <label for="start">Start</label>
+        <input type="text" name="start" id="start" placeholder="date" class="text ui-widget-content ui-corner-all">
+        <label for="end">End</label>
+        <input type="text" name="end" id="end" placeholder="end" class="text ui-widget-content ui-corner-all">
         <label for="password">Password</label>
         <input type="password" name="password" id="password" value="xxxxxxx" class="text ui-widget-content ui-corner-all">
    
@@ -139,7 +133,7 @@
     </form>
   </div>
    
-  <div id="users-contain" class="ui-widget">
+  <!-- <div id="users-contain" class="ui-widget">
     <h1>Existing Users:</h1>
     <table id="users" class="ui-widget ui-widget-content">
       <thead>
@@ -157,8 +151,8 @@
         </tr>
       </tbody>
     </table>
-  </div>
-  <button id="create-user">Create new user</button>
+  </div> -->
+  <button id="create-event">Create new event</button>
 </body>
 
 
