--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -1,23 +1,23 @@
-<head>
-  <meta charset="utf-8">
-  <title>jQuery UI Dialog - Modal form</title>
-  <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
-  <script src="//code.jquery.com/jquery-1.10.2.js"></script>
-  <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-  <link rel="stylesheet" href="/resources/demos/style.css">
-<!--   <style>
-    body { font-size: 62.5%; }
-    label, input { display:block; }
-    input.text { margin-bottom:12px; width:95%; padding: .4em; }
-    fieldset { padding:0; border:0; margin-top:25px; }
-    h1 { font-size: 1.2em; margin: .6em 0; }
-    div#users-contain { width: 350px; margin: 20px 0; }
-    div#users-contain table { margin: 1em 0; border-collapse: collapse; width: 100%; }
-    div#users-contain table td, div#users-contain table th { border: 1px solid #eee; padding: .6em 10px; text-align: left; }
-    .ui-dialog .ui-state-error { padding: .3em; }
-    .validateTips { border: 1px solid transparent; padding: 0.3em; }
+<!-- <head> -->
+  <!-- <meta charset="utf-8"> -->
+  <!-- <title>jQuery UI Dialog - Modal form</title> -->
+  <!-- <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css"> -->
+  <!-- <script src="//code.jquery.com/jquery-1.10.2.js"></script> -->
+  <!-- <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script> -->
+  <!-- <link rel="stylesheet" href="/resources/demos/style.css"> -->
+  <style>
+    /*body { font-size: 62.5%; }*/
+    /*label, input { display:block; }*/
+    /*input.text { margin-bottom:12px; width:95%; padding: .4em; }*/
+    /*fieldset { padding:0; border:0; margin-top:25px; }*/
+    /*h1 { font-size: 1.2em; margin: .6em 0; }*/
+    /*div#users-contain { width: 350px; margin: 20px 0; }*/
+    /*div#users-contain table { margin: 1em 0; border-collapse: collapse; width: 100%; }*/
+    /*div#users-contain table td, div#users-contain table th { border: 1px solid #eee; padding: .6em 10px; text-align: left; }*/
+    /*.ui-dialog .ui-state-error { padding: .3em; }*/
+    /*.validateTips { border: 1px solid transparent; padding: 0.3em; }*/
   </style>
- -->
+
   <script>
     // $(function() {
     //   var dialog, form,
@@ -110,29 +110,27 @@
     //   });
     // });
   </script>
-</head>
+<!-- </head> -->
 
- <body>
-
-  <div id="dialog-form" title="Create new event">
-    <p class="validateTips">All form fields are required.</p>
-    <form>
-      <fieldset>
-        <label for="summary">Summary</label>
-        <input type="text" name="summary" id="summary" placeholder="Title" class="text ui-widget-content ui-corner-all">
-        <label for="start">Start</label>
-        <input type="text" name="start" id="start" placeholder="date" class="text ui-widget-content ui-corner-all">
-        <label for="end">End</label>
-        <input type="text" name="end" id="end" placeholder="end" class="text ui-widget-content ui-corner-all">
-        <label for="password">Password</label>
-        <input type="password" name="password" id="password" value="xxxxxxx" class="text ui-widget-content ui-corner-all">
+<!-- <body> -->
+  <!-- <div id="dialog-form" title="Create new event"> -->
+    <!-- <p class="validateTips">All form fields are required.</p> -->
+    <!-- <form> -->
+      <!-- <fieldset> -->
+        <!-- <label for="summary">Summary</label> -->
+        <!-- <input type="text" name="summary" id="summary" placeholder="Title" class="text ui-widget-content ui-corner-all"> -->
+        <!-- <label for="start">Start</label> -->
+        <!-- <input type="text" name="start" id="start" placeholder="date" class="text ui-widget-content ui-corner-all"> -->
+        <!-- <label for="end">End</label> -->
+        <!-- <input type="text" name="end" id="end" placeholder="end" class="text ui-widget-content ui-corner-all"> -->
+        <!-- <label for="password">Password</label> -->
+        <!-- <input type="password" name="password" id="password" value="xxxxxxx" class="text ui-widget-content ui-corner-all"> -->
    
-        Allow form submission with keyboard without duplicating the dialog button
-        <input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
-      </fieldset>
-    </form>
-  </div>
-   
+        <!-- Allow form submission with keyboard without duplicating the dialog button -->
+        <!-- <input type="submit" tabindex="-1" style="position:absolute; top:-1000px"> -->
+      <!-- </fieldset> -->
+    <!-- </form> -->
+  <!-- </div> -->
   <!-- <div id="users-contain" class="ui-widget">
     <h1>Existing Users:</h1>
     <table id="users" class="ui-widget ui-widget-content">
@@ -152,7 +150,26 @@
       </tbody>
     </table>
   </div> -->
-  <button id="create-event">Create new event</button>
-</body>
+  <!-- <button id="create-event">Create new event</button> -->
+<!-- </body> -->
 
+<%= link_to 'New Event', '#new_event_modal', 'data-toggle' => 'modal' %>
 
+<%# Bootstrap modal markup. @see: http://getbootstrap.com/javascript/#modals %>
+<div class="modal fade" id="new_event_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title" id="myModalLabel">Create new event</h4>
+      </div>
+      <div class="modal-body">
+        <%# Render the new event form (passing modal => true to enable remote => true) %>
+        <%= render 'form', modal: true %>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
