--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,3 +1,3 @@
 <h1> </h1><br><br>
-<%= button_to "Patient", patients_path, method: :get %>
-<%= button_to "Doctor", doctors_path, method: :get %>
+<%= button_to "Patient", p_omniauth_patients_path, method: :get %>
+<%= button_to "Doctor", d_omniauth_doctors_path, method: :get %>
